--- a/package.json
+++ b/package.json
@@ -10,5 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.1.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/robin0925/sass-nodejs-sample-project.git"
+  },
+  "bugs": {
+    "url": "https://github.com/robin0925/sass-nodejs-sample-project/issues"
+  },
+  "homepage": "https://github.com/robin0925/sass-nodejs-sample-project#readme"
 }
